# cord

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.tls.yaml  docker-compose.yaml  nginx.conf
.github/workflows/: release.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: auth.py  cache.py  config.py  database.py  fail2ban.py  main.py  opengraph.py  rate_limit.py  ws_manager.py
backend/app/api/: admin.py  admin_fail2ban.py  auth.py  bookmarks.py  dms.py  groups.py  media.py  messages.py  notifications.py  polls.py  users.py  voice.py  ws.py
backend/app/models/: __init__.py  app_settings.py  bookmark.py  fail2ban.py  group.py  message.py  poll.py  session.py  user.py  user_chat_state.py
backend/app/schemas/: group.py  message.py
deploy/: README.md  nginx-container-tls.conf  nginx-host.conf
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/public/themes/: cotton-candy.json  cyberpunk.json  dracula.json  monokai-pro.json  nord-aurora.json  ocean-depths.json  rose-pine.json  sakura.json  solarized-dark.json  sunset-ember.json
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  adminAuth.ts  auth.ts  bookmarks.ts  client.ts  dms.ts  groups.ts  messages.ts  notifications.ts  polls.ts  search.ts  voice.ts
frontend/src/components/: AdvancedSearchPanel.tsx  AdvancedSearchRoot.tsx  CommandPalette.tsx  ErrorBoundary.tsx  FloatingCallBar.tsx  (+5 more)
(+47 files in other folders)
